# claudette

./: .gitignore  00_core.ipynb  01_helpers.ipynb  01_toolloop.ipynb  02_async.ipynb  02_struct.ipynb  02_toolloop.ipynb  03_text_editor.ipynb  04_bash_tools.ipynb  CHANGELOG-commonmark.md  CHANGELOG.html  CHANGELOG.md  CNAME  MANIFEST.in  README.md  README.txt  _quarto.yml  apilist.txt  async.html  async.html.md  cachy.jsonl  core.html  core.html.md  helpers.ipynb  index.html  index.html.md  index.ipynb  llms-ctx-full.txt  llms-ctx.txt  llms.txt  nbdev.yml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  styles.css  text_editor.html  text_editor.html.md  toolloop.html  (+1 more)
.github/workflows/: deploy.yaml
claudette/: __init__.py  _modidx.py  asink.py  bash_tools.py  core.py  helpers.py  struct.py  text_editor.py  toolloop.py
claudia/: _modidx.py  core.py
claudio/: __init__.py  _modidx.py  core.py
llm/: llms-ctx-full.txt  llms-ctx.txt  llms.txt
nbs/: 00_core.ipynb  01_toolloop.ipynb  02_async.ipynb  03_text_editor.ipynb  _quarto.yml  llms.txt
samples/: sample_core.py  sample_styles.css
site_libs/bootstrap/: bootstrap-0c38eea8a5bcddbb0645c6401af41d30.min.css  bootstrap-3079788b0fb9d9587af933d59c4f2ea1.min.css  bootstrap-455f2daabfd41e1eabbd21ab51c41381.min.css  bootstrap-487aabeace5651265d4e4052a5574511.min.css  bootstrap-5fb3e7de0d1c744d07291a160c28d057.min.css  bootstrap-6088a175bdae66fa1a96ba330cdd2f64.min.css  bootstrap-63d72624026bba3b28615182a05edfd9.min.css  bootstrap-8b55e97f680abda057e5757d617f3bf7.min.css  (+4 more)
tools/: refresh_llm_docs.sh
